# nanite_swarm

./: AGENTS.md  CODE_REVIEW_nanite_swarm_2026-06-06.md  Cargo.toml  MACROQUAD_TOOLKIT.md  README.md  ROADMAP.md  build_graphics.rs  game_page.json  gdd.md  index.html  publish.ps1
.cargo/: config.toml
.project/: build-plan.md  changelog.md  prd.md  tech-stack.md
assets/: buildings.json  game_config.json  images.json  research.json  terrain.json  ui_theme.json
graphics_gen/: mod.rs  tiles.rs  utils.rs
scripts/: capture_ui.ps1
src/: assets.rs  directives.rs  engine.rs  main.rs  state.rs
src/data/: defs.rs  game_config.rs  loader.rs  mod.rs  ui_theme.rs
src/engine/: drone_engine.rs  grid_engine.rs  mod.rs  research_engine.rs
src/engine/grid_engine/: building.rs  building_type.rs  grid.rs  grid_pos.rs  power.rs  terrain.rs  tile.rs
src/screens/: interplanetary_view.rs  main_menu.rs  mod.rs  planetary_view.rs  research_view.rs  settings_menu.rs
src/screens/planetary_view/: entity_render.rs  format.rs  hud.rs  input.rs  metrics.rs  terrain_render.rs
src/screens/planetary_view/hud/: bottom_bar.rs  build_palette.rs  directive_panel.rs  inspector_panel.rs  power_ops_panel.rs  top_bar.rs
src/state/: actions.rs  game_state.rs  mod.rs  particles.rs  persistence.rs  progress.rs  simulation.rs
src/ui/: components.rs  core.rs  mod.rs
