[package]
name = "nanite_swarm"
version = "0.1.0"
edition = "2021"
authors = ["Nanite Swarm Team"]
description = "A self-replicating AI simulation where players consume planetary bodies"

[dependencies]
macroquad = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
getrandom = { version = "0.2", features = ["js"] }
