[package]
name = "nanite_swarm"
version = "0.1.0"
edition = "2021"
authors = ["Nanite Swarm Team"]
description = "A self-replicating AI simulation where players consume planetary bodies"
default-run = "nanite_swarm"

[dependencies]
macroquad = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = "0.24"

[[bin]]
name = "build_graphics"
path = "build_graphics.rs"
